<resources>
    <string name="app_name">SmartQueue</string>
    <string name="hint_name">Поиск очереди</string>
    <string name="count_people">Количество людей:</string>
    <string name="count_time">Оставшееся время:</string>
    <string name="date">14.05.2016</string>
    <string name="connect">Связаться</string>
    <string name="position">Позиция:</string>
    <string name="dateLess">Оставшееся время:</string>
</resources>
