<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/imageView"
        android:layout_margin="11dp"
        android:src="@drawable/usericon"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/valueName" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:id="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/position"
                android:id="@+id/textView3"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/valuePosition"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical" />
    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/time"
                android:id="@+id/imageView2" />

            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dateLess"
                android:id="@+id/textView2"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="5 мин."
                android:id="@+id/valueDateLess"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical" />

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/connectButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>