<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="#ffffff"
    card_view:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageQueue"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:id="@+id/headerTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageQueue"
            android:background="@color/transparency_black">
            <TextView
                android:id="@+id/queueName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>



        <LinearLayout
            android:id="@+id/groupLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/imageQueue">

            <ImageView
                android:id="@+id/imagePeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:src="@drawable/group" />

            <TextView
                android:id="@+id/countPeopleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/count_people"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/countPeopleValue"
                android:layout_width="wrap_content"
                android:textColor="#ED111C"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/groupLayout"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/imageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:src="@drawable/time" />

            <TextView
                android:id="@+id/countTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/count_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/countTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ED111C"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timeLayout"
            android:layout_marginTop="9dp">

            <TextView
                android:id="@+id/countDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />


            <TextView
                android:id="@+id/countPositionStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:text="13"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#18CC2D" />

            <ImageView
                android:id="@+id/imagePerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/countPositionEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="9dp"
                android:fontFamily="sans-serif-light"
                android:text="23"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ED111C" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_close" />
    </RelativeLayout>
</android.support.v7.widget.CardView>